crates/squawk_parser/tests/snapshots/tests__regression_xml.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/regression_suite/xml.sql
---
ERROR@4527: expected R_PAREN
ERROR@4531: expected SEMICOLON
ERROR@4531: expected command, found R_PAREN
ERROR@4533: expected command, found FROM_KW
ERROR@4538: expected command, found IDENT
ERROR@4589: expected R_PAREN
ERROR@4593: expected SEMICOLON
ERROR@4593: expected command, found R_PAREN
ERROR@7929: expected EQ
ERROR@7936: expected SEMICOLON
ERROR@7937: expected command, found DOCUMENT_KW
ERROR@8035: expected EQ
ERROR@8042: expected SEMICOLON
ERROR@8043: expected command, found CONTENT_KW
ERROR@9037: expected R_PAREN
ERROR@9041: expected SEMICOLON
ERROR@9041: expected command, found R_PAREN
ERROR@18420: expected PASSING_KW
ERROR@18610: expected R_PAREN
ERROR@18610: expected SEMICOLON
ERROR@18611: expected command, found NOT_KW
ERROR@18615: expected command, found NULL_KW
ERROR@18619: expected command, found COMMA
ERROR@18655: expected command, found IDENT
ERROR@18666: expected command, found TEXT_KW
ERROR@18671: expected command, found PATH_KW
ERROR@18676: expected command, found STRING
ERROR@18688: expected command, found COMMA
ERROR@18724: expected command, found IDENT
ERROR@18734: expected command, found INT_KW
ERROR@18738: expected command, found PATH_KW
ERROR@18743: expected command, found STRING
ERROR@18754: expected command, found COMMA
ERROR@18790: expected command, found IDENT
ERROR@18795: expected command, found FLOAT_KW
ERROR@18801: expected command, found PATH_KW
ERROR@18806: expected command, found STRING
ERROR@18812: expected command, found COMMA
ERROR@18848: expected command, found IDENT
ERROR@18853: expected command, found TEXT_KW
ERROR@18858: expected command, found PATH_KW
ERROR@18863: expected command, found STRING
ERROR@18875: expected command, found COMMA
ERROR@18911: expected command, found IDENT
ERROR@18924: expected command, found TEXT_KW
ERROR@18929: expected command, found PATH_KW
ERROR@18934: expected command, found STRING
ERROR@18949: expected command, found DEFAULT_KW
ERROR@18957: expected command, found STRING
ERROR@18972: expected command, found R_PAREN
ERROR@19131: expected PASSING_KW
ERROR@19321: expected R_PAREN
ERROR@19321: expected SEMICOLON
ERROR@19322: expected command, found NOT_KW
ERROR@19326: expected command, found NULL_KW
ERROR@19330: expected command, found COMMA
ERROR@19366: expected command, found IDENT
ERROR@19377: expected command, found TEXT_KW
ERROR@19382: expected command, found PATH_KW
ERROR@19387: expected command, found STRING
ERROR@19399: expected command, found COMMA
ERROR@19435: expected command, found IDENT
ERROR@19445: expected command, found INT_KW
ERROR@19449: expected command, found PATH_KW
ERROR@19454: expected command, found STRING
ERROR@19465: expected command, found COMMA
ERROR@19501: expected command, found IDENT
ERROR@19506: expected command, found FLOAT_KW
ERROR@19512: expected command, found PATH_KW
ERROR@19517: expected command, found STRING
ERROR@19523: expected command, found COMMA
ERROR@19559: expected command, found IDENT
ERROR@19564: expected command, found TEXT_KW
ERROR@19569: expected command, found PATH_KW
ERROR@19574: expected command, found STRING
ERROR@19586: expected command, found COMMA
ERROR@19622: expected command, found IDENT
ERROR@19635: expected command, found TEXT_KW
ERROR@19640: expected command, found PATH_KW
ERROR@19645: expected command, found STRING
ERROR@19660: expected command, found DEFAULT_KW
ERROR@19668: expected command, found STRING
ERROR@19683: expected command, found R_PAREN
ERROR@19874: expected PASSING_KW
ERROR@19901: expected SEMICOLON
ERROR@19902: expected command, found AS_KW
ERROR@19905: expected command, found IDENT
ERROR@19907: expected command, found L_PAREN
ERROR@19908: expected command, found IDENT
ERROR@19910: expected command, found COMMA
ERROR@19912: expected command, found IDENT
ERROR@19914: expected command, found R_PAREN
ERROR@19956: expected PASSING_KW
ERROR@20003: expected SEMICOLON
ERROR@20004: expected command, found AS_KW
ERROR@20007: expected command, found IDENT
ERROR@20009: expected command, found L_PAREN
ERROR@20010: expected command, found IDENT
ERROR@20012: expected command, found R_PAREN
ERROR@20095: expected an expression, found COMMA
ERROR@20096: expected expression
ERROR@20360: expected an expression, found COMMA
ERROR@20361: expected expression
ERROR@20627: expected an expression, found COMMA
ERROR@20628: expected expression
ERROR@20862: expected PASSING_KW
ERROR@20893: expected COLUMNS_KW
ERROR@21103: expected PASSING_KW
ERROR@21286: expected R_PAREN
ERROR@21286: expected SEMICOLON
ERROR@21287: expected command, found NOT_KW
ERROR@21291: expected command, found NULL_KW
ERROR@21295: expected command, found COMMA
ERROR@21331: expected command, found IDENT
ERROR@21342: expected command, found TEXT_KW
ERROR@21347: expected command, found PATH_KW
ERROR@21352: expected command, found STRING
ERROR@21364: expected command, found COMMA
ERROR@21400: expected command, found IDENT
ERROR@21410: expected command, found INT_KW
ERROR@21414: expected command, found PATH_KW
ERROR@21419: expected command, found STRING
ERROR@21430: expected command, found COMMA
ERROR@21466: expected command, found IDENT
ERROR@21471: expected command, found FLOAT_KW
ERROR@21477: expected command, found PATH_KW
ERROR@21482: expected command, found STRING
ERROR@21488: expected command, found COMMA
ERROR@21524: expected command, found IDENT
ERROR@21529: expected command, found TEXT_KW
ERROR@21534: expected command, found PATH_KW
ERROR@21539: expected command, found STRING
ERROR@21551: expected command, found COMMA
ERROR@21587: expected command, found IDENT
ERROR@21600: expected command, found TEXT_KW
ERROR@21605: expected command, found PATH_KW
ERROR@21610: expected command, found STRING
ERROR@21625: expected command, found DEFAULT_KW
ERROR@21633: expected command, found STRING
ERROR@21648: expected command, found R_PAREN
ERROR@21779: expected PASSING_KW
ERROR@21946: expected PASSING_KW
ERROR@22132: expected PASSING_KW
ERROR@22318: expected PASSING_KW
ERROR@22466: expected PASSING_KW
ERROR@22614: expected PASSING_KW
ERROR@22696: expected R_PAREN
ERROR@22696: expected SEMICOLON
ERROR@22697: expected command, found PATH_KW
ERROR@22702: expected command, found STRING
ERROR@22705: expected command, found R_PAREN
ERROR@22822: expected PASSING_KW
ERROR@22904: expected R_PAREN
ERROR@22904: expected SEMICOLON
ERROR@22905: expected command, found PATH_KW
ERROR@22910: expected command, found STRING
ERROR@22915: expected command, found R_PAREN
ERROR@23049: expected PASSING_KW
ERROR@23057: expected COLUMNS_KW
ERROR@23203: expected PASSING_KW
ERROR@23211: expected COLUMNS_KW
ERROR@23389: expected PASSING_KW
ERROR@23397: expected COLUMNS_KW
ERROR@23594: expected PASSING_KW
ERROR@23602: expected COLUMNS_KW
ERROR@23776: expected PASSING_KW
ERROR@23784: expected COLUMNS_KW
ERROR@23951: expected PASSING_KW
ERROR@24134: expected R_PAREN
ERROR@24134: expected SEMICOLON
ERROR@24135: expected command, found NOT_KW
ERROR@24139: expected command, found NULL_KW
ERROR@24143: expected command, found COMMA
ERROR@24179: expected command, found IDENT
ERROR@24190: expected command, found TEXT_KW
ERROR@24195: expected command, found PATH_KW
ERROR@24200: expected command, found STRING
ERROR@24212: expected command, found COMMA
ERROR@24248: expected command, found IDENT
ERROR@24258: expected command, found INT_KW
ERROR@24262: expected command, found PATH_KW
ERROR@24267: expected command, found STRING
ERROR@24278: expected command, found COMMA
ERROR@24314: expected command, found IDENT
ERROR@24319: expected command, found FLOAT_KW
ERROR@24325: expected command, found PATH_KW
ERROR@24330: expected command, found STRING
ERROR@24336: expected command, found COMMA
ERROR@24372: expected command, found IDENT
ERROR@24377: expected command, found TEXT_KW
ERROR@24382: expected command, found PATH_KW
ERROR@24387: expected command, found STRING
ERROR@24399: expected command, found COMMA
ERROR@24435: expected command, found IDENT
ERROR@24448: expected command, found TEXT_KW
ERROR@24453: expected command, found PATH_KW
ERROR@24458: expected command, found STRING
ERROR@24473: expected command, found DEFAULT_KW
ERROR@24481: expected command, found STRING
ERROR@24496: expected command, found R_PAREN
ERROR@24627: expected PASSING_KW
ERROR@24848: expected PASSING_KW
ERROR@24899: expected SEMICOLON
ERROR@24900: expected command, found AS_KW
ERROR@24903: expected command, found IDENT
ERROR@24905: expected command, found WHERE_KW
ERROR@24911: expected command, found IDENT
ERROR@24926: expected command, found EQ
ERROR@24928: expected command, found STRING
ERROR@25087: expected PASSING_KW
ERROR@25138: expected SEMICOLON
ERROR@25139: expected command, found AS_KW
ERROR@25142: expected command, found IDENT
ERROR@25144: expected command, found WHERE_KW
ERROR@25150: expected command, found IDENT
ERROR@25165: expected command, found EQ
ERROR@25167: expected command, found STRING
ERROR@26057: expected PASSING_KW
ERROR@26240: expected R_PAREN
ERROR@26240: expected SEMICOLON
ERROR@26241: expected command, found NOT_KW
ERROR@26245: expected command, found NULL_KW
ERROR@26249: expected command, found COMMA
ERROR@26285: expected command, found IDENT
ERROR@26296: expected command, found TEXT_KW
ERROR@26301: expected command, found PATH_KW
ERROR@26306: expected command, found STRING
ERROR@26318: expected command, found COMMA
ERROR@26354: expected command, found IDENT
ERROR@26364: expected command, found INT_KW
ERROR@26368: expected command, found PATH_KW
ERROR@26373: expected command, found STRING
ERROR@26384: expected command, found COMMA
ERROR@26420: expected command, found IDENT
ERROR@26425: expected command, found FLOAT_KW
ERROR@26431: expected command, found PATH_KW
ERROR@26436: expected command, found STRING
ERROR@26442: expected command, found COMMA
ERROR@26478: expected command, found IDENT
ERROR@26483: expected command, found TEXT_KW
ERROR@26488: expected command, found PATH_KW
ERROR@26493: expected command, found STRING
ERROR@26505: expected command, found COMMA
ERROR@26541: expected command, found IDENT
ERROR@26554: expected command, found TEXT_KW
ERROR@26559: expected command, found PATH_KW
ERROR@26564: expected command, found STRING
ERROR@26579: expected command, found DEFAULT_KW
ERROR@26587: expected command, found STRING
ERROR@26602: expected command, found R_PAREN
ERROR@26732: expected PASSING_KW
ERROR@26915: expected R_PAREN
ERROR@26915: expected SEMICOLON
ERROR@26916: expected command, found NOT_KW
ERROR@26920: expected command, found NULL_KW
ERROR@26924: expected command, found COMMA
ERROR@26960: expected command, found IDENT
ERROR@26971: expected command, found TEXT_KW
ERROR@26976: expected command, found PATH_KW
ERROR@26981: expected command, found STRING
ERROR@26993: expected command, found COMMA
ERROR@27029: expected command, found IDENT
ERROR@27039: expected command, found INT_KW
ERROR@27043: expected command, found PATH_KW
ERROR@27048: expected command, found STRING
ERROR@27059: expected command, found COMMA
ERROR@27095: expected command, found IDENT
ERROR@27100: expected command, found FLOAT_KW
ERROR@27106: expected command, found PATH_KW
ERROR@27111: expected command, found STRING
ERROR@27117: expected command, found COMMA
ERROR@27153: expected command, found IDENT
ERROR@27158: expected command, found TEXT_KW
ERROR@27163: expected command, found PATH_KW
ERROR@27168: expected command, found STRING
ERROR@27180: expected command, found COMMA
ERROR@27216: expected command, found IDENT
ERROR@27229: expected command, found TEXT_KW
ERROR@27234: expected command, found PATH_KW
ERROR@27239: expected command, found STRING
ERROR@27254: expected command, found DEFAULT_KW
ERROR@27262: expected command, found STRING
ERROR@27277: expected command, found R_PAREN
ERROR@27281: expected command, found WHERE_KW
ERROR@27287: expected command, found IDENT
ERROR@27297: expected command, found EQ
ERROR@27299: expected command, found INT_NUMBER
ERROR@27458: expected PASSING_KW
ERROR@27641: expected R_PAREN
ERROR@27641: expected SEMICOLON
ERROR@27642: expected command, found NOT_KW
ERROR@27646: expected command, found NULL_KW
ERROR@27650: expected command, found COMMA
ERROR@27686: expected command, found IDENT
ERROR@27697: expected command, found TEXT_KW
ERROR@27702: expected command, found PATH_KW
ERROR@27707: expected command, found STRING
ERROR@27719: expected command, found COMMA
ERROR@27755: expected command, found IDENT
ERROR@27765: expected command, found INT_KW
ERROR@27769: expected command, found PATH_KW
ERROR@27774: expected command, found STRING
ERROR@27785: expected command, found COMMA
ERROR@27821: expected command, found IDENT
ERROR@27826: expected command, found FLOAT_KW
ERROR@27832: expected command, found PATH_KW
ERROR@27837: expected command, found STRING
ERROR@27843: expected command, found COMMA
ERROR@27879: expected command, found IDENT
ERROR@27884: expected command, found TEXT_KW
ERROR@27889: expected command, found PATH_KW
ERROR@27894: expected command, found STRING
ERROR@27906: expected command, found COMMA
ERROR@27942: expected command, found IDENT
ERROR@27955: expected command, found TEXT_KW
ERROR@27960: expected command, found PATH_KW
ERROR@27965: expected command, found STRING
ERROR@27980: expected command, found DEFAULT_KW
ERROR@27988: expected command, found STRING
ERROR@28003: expected command, found R_PAREN
ERROR@28007: expected command, found WHERE_KW
ERROR@28013: expected command, found IDENT
ERROR@28023: expected command, found EQ
ERROR@28025: expected command, found INT_NUMBER
ERROR@28182: expected PASSING_KW
ERROR@28365: expected R_PAREN
ERROR@28365: expected SEMICOLON
ERROR@28366: expected command, found NOT_KW
ERROR@28370: expected command, found NULL_KW
ERROR@28374: expected command, found COMMA
ERROR@28410: expected command, found IDENT
ERROR@28421: expected command, found TEXT_KW
ERROR@28426: expected command, found PATH_KW
ERROR@28431: expected command, found STRING
ERROR@28443: expected command, found COMMA
ERROR@28479: expected command, found IDENT
ERROR@28489: expected command, found INT_KW
ERROR@28493: expected command, found PATH_KW
ERROR@28498: expected command, found STRING
ERROR@28509: expected command, found COMMA
ERROR@28545: expected command, found IDENT
ERROR@28550: expected command, found FLOAT_KW
ERROR@28556: expected command, found PATH_KW
ERROR@28561: expected command, found STRING
ERROR@28568: expected command, found NOT_KW
ERROR@28572: expected command, found NULL_KW
ERROR@28576: expected command, found COMMA
ERROR@28612: expected command, found IDENT
ERROR@28617: expected command, found TEXT_KW
ERROR@28622: expected command, found PATH_KW
ERROR@28627: expected command, found STRING
ERROR@28639: expected command, found COMMA
ERROR@28675: expected command, found IDENT
ERROR@28688: expected command, found TEXT_KW
ERROR@28693: expected command, found PATH_KW
ERROR@28698: expected command, found STRING
ERROR@28713: expected command, found DEFAULT_KW
ERROR@28721: expected command, found STRING
ERROR@28736: expected command, found R_PAREN
ERROR@29427: expected PASSING_KW
ERROR@30535: expected PASSING_KW
ERROR@31283: expected PASSING_KW
ERROR@31423: expected PASSING_KW
ERROR@31541: expected PASSING_KW
ERROR@31566: expected R_PAREN
ERROR@31566: expected SEMICOLON
ERROR@31567: expected command, found DEFAULT_KW
ERROR@31575: expected command, found IDENT
ERROR@31580: expected command, found L_PAREN
ERROR@31581: expected command, found IDENT
ERROR@31586: expected command, found R_PAREN
ERROR@31588: expected command, found MINUS
ERROR@31590: expected command, found INT_NUMBER
ERROR@31592: expected command, found R_PAREN
ERROR@31686: expected PASSING_KW
ERROR@31694: expected COLUMNS_KW
ERROR@31915: expected PASSING_KW
ERROR@31923: expected COLUMNS_KW
ERROR@31996: expected PASSING_KW
