crates/squawk_parser/tests/snapshots/tests__regression_xmlmap.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: postgres/regression_suite/xmlmap.sql
---

