crates/squawk_parser/tests/snapshots/tests__reindex_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/reindex.sql
---
SOURCE_FILE
  COMMENT "-- missing commas"
  WHITESPACE "\n"
  REINDEX
    REINDEX_KW "reindex"
    WHITESPACE " "
    REINDEX_OPTION_LIST
      L_PAREN "("
      REINDEX_OPTION
        CONCURRENTLY_KW "concurrently"
        WHITESPACE " "
        VERBOSE_KW "verbose"
      WHITESPACE " "
      REINDEX_OPTION
        TABLESPACE_KW "tablespace"
        WHITESPACE " "
        TABLESPACE_REF
          IDENT "t"
      R_PAREN ")"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ reindex (concurrently verbose tablespace t) index i;
  ╰╴                             ━
