crates/squawk_parser/tests/snapshots/tests__repack_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/repack.sql
---
SOURCE_FILE
  REPACK
    REPACK_KW "repack"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  REPACK
    REPACK_KW "repack"
    WHITESPACE " "
    USING_INDEX
      USING_KW "using"
      WHITESPACE " "
      INDEX_KW "index"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  REPACK
    REPACK_KW "repack"
    WHITESPACE " "
    USING_INDEX
      USING_KW "using"
      WHITESPACE " "
      INDEX_KW "index"
      WHITESPACE " "
      INDEX_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "idx"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  REPACK
    REPACK_KW "repack"
    WHITESPACE " "
    OPTION_ITEM_LIST
      L_PAREN "("
      OPTION_ITEM
        VERBOSE_KW "verbose"
        WHITESPACE " "
        LITERAL
          FALSE_KW "false"
      R_PAREN ")"
    WHITESPACE " "
    TABLE_AND_COLUMNS_LIST
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "foo"
              DOT "."
              PATH_SEGMENT_REF
                IDENT "bar"
        WHITESPACE " "
        COLUMN_REF_LIST
          L_PAREN "("
          COLUMN_REF
            COLUMN_NAME_REF
              IDENT "a"
          COMMA ","
          WHITESPACE " "
          COLUMN_REF
            COLUMN_NAME_REF
              IDENT "b"
          R_PAREN ")"
    WHITESPACE " "
    USING_INDEX
      USING_KW "using"
      WHITESPACE " "
      INDEX_KW "index"
      WHITESPACE " "
      INDEX_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "idx"
    SEMICOLON ";"
  WHITESPACE "\n\n"
