crates/squawk_parser/tests/snapshots/tests__reset_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/reset.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  RESET
    RESET_KW "reset"
    WHITESPACE " "
    CONFIG_PARAMETER_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "some_config_param"
    SEMICOLON ";"
  WHITESPACE "\n"
  RESET
    RESET_KW "reset"
    WHITESPACE " "
    ALL
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  RESET
    RESET_KW "reset"
    WHITESPACE " "
    CONFIG_PARAMETER_REF
      PATH_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "bar"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "buzz"
    SEMICOLON ";"
  WHITESPACE "\n"
  RESET
    RESET_KW "reset"
    WHITESPACE " "
    RESET_TIME_ZONE
      TIME_KW "time"
      WHITESPACE " "
      ZONE_KW "zone"
    SEMICOLON ";"
  WHITESPACE "\n"
  RESET
    RESET_KW "reset"
    WHITESPACE " "
    RESET_TRANSACTION_ISOLATION
      TRANSACTION_KW "transaction"
      WHITESPACE " "
      ISOLATION_KW "isolation"
      WHITESPACE " "
      LEVEL_KW "level"
    SEMICOLON ";"
  WHITESPACE "\n"
  RESET_SESSION_AUTH
    RESET_KW "reset"
    WHITESPACE " "
    SESSION_KW "session"
    WHITESPACE " "
    AUTHORIZATION_KW "authorization"
    SEMICOLON ";"
  WHITESPACE "\n"
