crates/squawk_parser/tests/snapshots/tests__restart_values_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/restart_values.sql
---
SOURCE_FILE
  ALTER_SEQUENCE
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    OPTION_RESTART
      RESTART_KW "restart"
      WHITESPACE " "
      WITH_KW "with"
      WHITESPACE " "
      ERROR
        PREFIX_EXPR
          MINUS "-"
          PREFIX_EXPR
            CUSTOM_OP
              R_ANGLE ">"
              R_ANGLE ">"
            LITERAL
              INT_NUMBER "5"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SEQUENCE
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    SEQUENCE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    WHITESPACE " "
    OPTION_RESTART
      RESTART_KW "restart"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "1"
  WHITESPACE " "
  ERROR
    PLUS "+"
  WHITESPACE " "
  ERROR
    INT_NUMBER "2"
  EMPTY_STMT
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_TABLE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_RELATION_NAME
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    ALTER_COLUMN
      ALTER_KW "alter"
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "c"
      WHITESPACE " "
      RESTART
        RESTART_KW "restart"
        WHITESPACE " "
        WITH_KW "with"
        WHITESPACE " "
        ERROR
          NAME_REF
            IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_TABLE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_RELATION_NAME
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    ALTER_COLUMN
      ALTER_KW "alter"
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "c"
      WHITESPACE " "
      RESTART
        RESTART_KW "restart"
        ERROR
          PREFIX_EXPR
            MINUS "-"
            PREFIX_EXPR
              CUSTOM_OP
                R_ANGLE ">"
                R_ANGLE ">"
              LITERAL
                INT_NUMBER "5"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_TABLE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_RELATION_NAME
      TABLE_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    ALTER_COLUMN
      ALTER_KW "alter"
      WHITESPACE " "
      COLUMN_NAME_REF
        IDENT "c"
      WHITESPACE " "
      SET_GENERATED_OPTIONS
        SET_GENERATED
          SET_KW "set"
          WHITESPACE " "
          GENERATED_KW "generated"
          WHITESPACE " "
          GENERATED_ALWAYS
            ALWAYS_KW "always"
        WHITESPACE " "
        RESTART
          RESTART_KW "restart"
          WHITESPACE " "
          WITH_KW "with"
          WHITESPACE " "
          ERROR
            PREFIX_EXPR
              MINUS "-"
              PREFIX_EXPR
                PLUS "+"
                LITERAL
                  INT_NUMBER "2"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected numeric literal
  ╭▸ 
1 │ alter sequence s restart with ->>5;
  ╰╴                              ━
error[syntax-error]: expected command, found PLUS
  ╭▸ 
2 │ alter sequence s restart 1 + 2;
  ╰╴                           ━
error[syntax-error]: expected command, found INT_NUMBER
  ╭▸ 
2 │ alter sequence s restart 1 + 2;
  ╰╴                             ━
error[syntax-error]: expected numeric literal
  ╭▸ 
3 │ alter table t alter c restart with foo;
  ╰╴                                   ━
error[syntax-error]: expected numeric literal
  ╭▸ 
4 │ alter table t alter c restart->>5;
  ╰╴                             ━
error[syntax-error]: expected numeric literal
  ╭▸ 
5 │ alter table t alter c set generated always restart with -+2;
  ╰╴                                                        ━
